# api-rate-limiter

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci-cd.yml
app/: __init__.py  config.py  main.py
app/algorithms/: __init__.py  base.py  fixed_window.py  leaky_bucket.py  sliding_window_log.py  token_bucket.py
app/middleware/: __init__.py  rate_limiter.py
app/routes/: api.py
app/utils/: redis_client.py
tests/: conftest.py
tests/integration/: test_rate_limiter_api.py
tests/unit/: test_fixed_window.py  test_leaky_bucket.py  test_sliding_window_log.py  test_token_bucket.py
