[project]
name = "api-rate-limiter"
version = "1.0.0"
description = "Production-ready API Rate Limiter supporting 4 algorithms"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Prashant Singh" }]
keywords = ["rate-limiter", "api", "fastapi", "redis", "token-bucket", "sliding-window"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true